# MediaFactory

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE.txt  README.md  README_zh.md  SECURITY.md  cliff.toml  config.toml.example  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  ui.pen
.claude/agents/: open-source-auditor.md
.claude/skills/pre-release-check/: SKILL.md
.claude/skills/pre-release-check/references/: mediafactory_context.md  python_best_practices.md  report_template.md
.claude/skills/pre-release-check/scripts/: analyze_complexity.py  check_consistency.py  check_dependencies.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  interview-qa.md  wiki.md
electron/: tsconfig.json
electron/main/: index.ts  ipcHandlers.ts  pythonManager.ts
electron/preload/: index.ts  tsconfig.json
electron/renderer/: index.html  tsconfig.json
electron/renderer/src/: main.tsx
electron/renderer/src/api/: queries.ts
electron/renderer/src/components/: ErrorBoundary.tsx
electron/resources/: icon.icns
mediafactory/: __main__.py  _version.py  constants.py  exceptions.py  i18n.py  launcher.py  resource_manager.py
mediafactory/api/: __init__.py  error_handler.py  main.py  schemas.py  task_executor.py  task_manager.py  websocket.py
mediafactory/api/routes/: __init__.py  config.py  models.py  processing.py
mediafactory/config/: __init__.py  defaults.py  models.py
mediafactory/core/: __init__.py  error_utils.py  exception_wrapper.py  resource_protocol.py  tool.py
mediafactory/engine/: __init__.py  ass_engine.py  audio.py  postprocess.py  translation.py  video_enhancement.py
mediafactory/engine/enhancement/: __init__.py  denoiser.py  temporal_smoother.py
mediafactory/llm/: __init__.py  base.py  local_fallback.py  openai_compatible_backend.py
mediafactory/locales/: en.json  zh-CN.json
mediafactory/logging/: __init__.py  loguru_logger.py
mediafactory/models/: __init__.py  local_models.py  memory_detection.py  model_registry.py  translation_runtime.py  whisper_runtime.py
mediafactory/pipeline/: __init__.py  context.py  pipeline.py  stage.py  stages.py
mediafactory/resources/subtitle_styles/: minimal.ass  science.ass
mediafactory/services/: __init__.py  audio.py  models.py  subtitle.py  transcription.py  translation.py  video_enhancement.py
mediafactory/utils/: file_utils.py  language_detector.py  prompt_loader.py  resource_management.py  resources.py  time_estimator.py  transformers_config.py
scripts/: setup_env.py
scripts/debug/: README.md  __init__.py  local_model_debug.py  openai_debug.py  test_local_models.py  whisper_debug.py
scripts/installer/: dependency_installer.py  model_downloader.py
scripts/pyinstaller/: README_PYINSTALLER.md  installer_simple.spec
scripts/pyinstaller/hooks/: hook-flet.py  hook-mediafactory.py  hook-pkg_resources.py  hook-transformers.py  hook-uvicorn.py
scripts/utils/: build_common.py  build_executor.py  check_gpu.py  download_model.py  init_models_in_installation.py  install_dependencies.py  sync_version.py
src/: App.tsx  index.css  index.html  tsconfig.json
src/api/: queries.ts
src/components/Layout/: PageHeader.tsx
src/components/common/: ErrorPage.tsx  StatusTag.tsx
src/electron/: tsconfig.json
src/electron/main/: index.ts  ipcHandlers.ts  pythonManager.ts
src/electron/preload/: index.ts
src/electron/renderer/: tsconfig.json
src/locales/zh-CN/: forms.json
src/mediafactory/: __init__.py  __main__.py  _version.py  batch.py  constants.py  exceptions.py  i18n.py  launcher.py  resource_manager.py
src/mediafactory/api/: error_handler.py  main.py  schemas.py  task_executor.py  task_manager.py  websocket.py
src/mediafactory/config/: defaults.py  manager.py  models.py
src/mediafactory/core/: __init__.py  exception_wrapper.py  progress_bridge.py  progress_protocol.py
src/mediafactory/engine/: __init__.py  ass_engine.py  audio.py  postprocess.py  recognition.py  srt.py  translation.py  video_composer.py  video_enhancement.py
src/mediafactory/gui/: __init__.py
src/mediafactory/llm/: __init__.py  base.py  local_fallback.py  openai_compatible_backend.py
src/mediafactory/locales/: en.json  zh-CN.json
src/mediafactory/logging/: __init__.py  loguru_logger.py
src/mediafactory/models/: __init__.py  local_models.py  memory_detection.py  model_download.py  model_registry.py  translation_runtime.py  whisper_runtime.py
src/mediafactory/pipeline/: __init__.py  context.py  pipeline.py  stages.py
src/mediafactory/resources/: languages.ini
src/mediafactory/services/: audio.py  models.py  subtitle.py  transcription.py  translation.py  video_enhancement.py
src/mediafactory/utils/: __init__.py  file_utils.py  resources.py  time_estimator.py  video_scanner.py
src/pages/Settings/: ModelCard.tsx  index.tsx
src/pages/Tasks/: TaskCard.tsx
tests/: conftest.py  test_basic_flow.py  test_cancellation.py  test_engine_robustness.py  test_local_models.py  test_logging.py  test_process_video.py  test_translation_accuracy.py  test_vtt_format.py
tests/data/: ja_zh_test_data.py
tests/engine/: __init__.py  test_audio_engine.py  test_recognition_engine.py  test_srt_engine.py  test_translation_engine.py
tests/helpers/: mock_backends.py
tests/integration/: test_translation_accuracy.py
tests/llm/: __init__.py
tests/resources/: README.md  __init__.py
tests/unit/: conftest.py  test_constants.py  test_i18n.py  test_logging.py
tests/unit/api/: test_error_handler.py  test_schemas.py
tests/unit/config/: conftest.py  test_config_manager.py  test_config_models.py
tests/unit/core/: test_cancellation.py  test_exception_wrapper.py
tests/unit/engine/: conftest.py  test_audio_engine.py  test_srt_engine.py  test_translation_engine.py
tests/unit/llm/: conftest.py  test_base.py
tests/unit/pipeline/: test_context.py  test_pipeline.py
tests/unit/utils/: test_prompt_loader.py  test_video_scanner.py
(+113 files in other folders)
