[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediafactory"
version = "0.2.1"
description = "Extensible multimedia processing platform with plugin architecture"
readme = "README.md"
authors = [{name = "Dragon", email = "fldx123456@163.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["media", "video", "audio", "subtitle", "whisper", "speech-recognition", "translation", "plugin", "extensible"]

# ==============================================================================
# Core dependencies (启动必需 - ~200MB)
# ==============================================================================
dependencies = [
    # 配置和日志
    "loguru>=0.7.2",
    "pydantic>=2.9.0,<3.0.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    # 系统资源监控
    "psutil>=6.0.0",
    # 音视频处理（FFmpeg 二进制）
    "imageio-ffmpeg>=0.5.1",  # FFmpeg 二进制（~70MB）
    # 视频处理核心依赖
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    # 进度显示
    "tqdm>=4.66.0",
    # 语言检测
    "langdetect>=1.0.9",
    # Hugging Face 模型下载 (与 transformers 4.52+ 兼容)
    "huggingface-hub>=0.30.0,<1.0.0",
    # LLM API SDKs (远程翻译，无需本地模型)
    "openai>=1.50.0",     # OpenAI SDK 支持 (统一后端)
    "tenacity>=8.2.0",   # 重试机制
    # API Server (Electron 前端后端)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
requires-python = ">=3.11,<3.14"

# ==============================================================================
# Console scripts (命令行入口点)
# ==============================================================================
[project.scripts]
mediafactory = "mediafactory.api.main:start_server"

# ==============================================================================
# Dependency Groups (依赖分组)
# ==============================================================================
# 使用 PEP 735 dependency groups 进行依赖分组
# 适用于 APP 开发（不发布到 PyPI）
# 安装方式: uv sync --group <group_name>
#
# 三组依赖说明：
# - bundle: 打包依赖（PyInstaller 要打包的，不含 ML）- 用于打包验证
# - core: 核心依赖（所有功能，含 ML）- 开发者和用户安装
# - dev: 开发依赖（开发工具）- 仅开发者需要
#
# 使用方式：
# - 开发者: uv sync --all-groups
# - 用户: uv sync --group core
# - 打包验证: uv sync --group bundle
[dependency-groups]

# 打包依赖（PyInstaller 要打包的依赖，不含 ML）
# 用于验证打包依赖的完整性，与 [project.dependencies] 一致
bundle = [
    "loguru>=0.7.2",
    "pydantic>=2.9.0,<3.0.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "psutil>=6.0.0",
    "tqdm>=4.66.0",
    "imageio-ffmpeg>=0.5.1",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "langdetect>=1.0.9",
    "huggingface-hub>=0.30.0,<1.0.0",
    "openai>=1.50.0",
    "tenacity>=8.2.0",
    # API Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

# 核心依赖（所有功能依赖，包含 ML）
# 这是完整功能所需的依赖，开发者和需要本地 ML 功能的用户需要安装
# ML 依赖统一使用 CUDA 12.8 (cu128)，支持 Blackwell (RTX 50系) 及更早架构
# 最低驱动要求 NVIDIA Driver ≥ 525.60.13 (推荐 ≥ 550.00 以获得最佳兼容性)
# PyTorch 从官方源下载以获取 CUDA 支持
core = [
    # 包含所有打包依赖
    "loguru>=0.7.2",
    "pydantic>=2.9.0,<3.0.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "psutil>=6.0.0",
    "tqdm>=4.66.0",
    "imageio-ffmpeg>=0.5.1",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "langdetect>=1.0.9",
    "huggingface-hub>=0.30.0,<1.0.0",
    "openai>=1.50.0",
    "tenacity>=8.2.0",
    # ML 依赖（本地 ASR 和翻译功能）
    "torch>=2.5.0",                 # PyTorch（CUDA 12.8）
    "torchvision>=0.20.0",         # PyTorch Vision（CUDA 12.8）
    "torchaudio>=2.5.0",           # PyTorch Audio（CUDA 12.8）
    "faster-whisper>=1.0.0,<2.0.0",  # Whisper（使用 faster-whisper）
    "gguf>=0.10.0",                 # GGUF 模型加载支持
    "transformers>=4.52.1,<5.0.0",  # Transformers（修复 CVE-2025-3933）
    "sentencepiece>=0.1.99",        # 支持库
    "accelerate>=1.0.0",            # 支持库
    "spandrel>=0.4.0",              # 统一模型加载库（视频增强）
    # API Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

# 开发依赖（开发工具、代码质量检查）
# 仅开发者需要，不包含 ML 依赖（避免重复）
dev = [
    # 测试
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    # 代码质量
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",            # Git hooks 代码检查
    # 构建
    "build>=0.10.0",
    "twine>=4.0.0",
    "pyinstaller>=6.18.0",
    "pillow>=10.0.0",               # 图标处理（PyInstaller 需要 PNG→ICO）
]

##### Test Settings #####
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/mediafactory --cov-report=html --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "requires_network: Tests requiring network access"
]

[tool.coverage.run]
source = ["src/"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    'if __name__ == ".*main.*":'
]

##### Build Settings #####
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

##### Black Check Settings #####
[tool.black]
line-length = 88
target-version = ['py311']
include = '\\.pyi?$'
extend-exclude = '''
^/
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
$
'''

##### Bandit Security Check Settings #####
[tool.bandit]
tests = [
    # Include all tests except for the ones we want to exclude
]
skips = [
    # Skip tests for issues that are not applicable to this project
]
exclude_dirs = ["tests/"]

##### Flake8 Style Check Settings #####
[tool.flake8]
# 与 Black 保持一致的行长度
max-line-length = 88
extend-ignore = [
    "F401",  # Ignore 'module imported but unused' warnings
    "E203",  # Ignore 'whitespace before ':' which is not PEP 8 compliant
    "W503",  # Ignore 'line break before binary operator'
    "E501",  # Ignore line too long (Black handles this)
]
per-file-ignores = [
    # Allow unused imports in __init__.py files
    "__init__.py:F401",
]
max-complexity = 15  # Allow higher complexity for business logic

##### isort Import Sorting Settings #####
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mediafactory"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".venv", "venv", ".git", "__pycache__", ".eggs", "*.egg", "build", "dist"]

##### Type & Annotation Check Settings #####
[tool.mypy]
python_version = "3.13"
warn_unused_configs = false

# Relax type checking significantly
disallow_untyped_defs = false
check_untyped_defs = false
warn_redundant_casts = false
warn_unused_ignores = false
strict_equality = false
disallow_incomplete_defs = false
no_implicit_optional = false  # Allow implicit optional
warn_return_any = false
disallow_untyped_decorators = false
warn_no_return = false
warn_unreachable = false

##### uv Package Index Settings #####
# PyTorch 官方源配置
# - Linux/Windows: 使用 CUDA 12.8 版本（支持 Blackwell RTX 50系 及更早架构）
# - macOS: 使用 PyPI 默认版本（CPU，因为 Faster Whisper 不支持 MPS）
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
